Fix stat not showing up

--- a/holyrome/v1/page/index.css
+++ b/holyrome/v1/page/index.css
@@ -170,4 +170,5 @@ p {
   height: 100px;
   border-radius: 5px;
   background-color: beige;
+  position: absolute;
 }
